[tool.flake8]
extend-ignore = "E501,W503"

[tool.isort]
profile = "black"

[tool.poetry]
name = "twitter-rss"
version = "0.1.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
feedgen = "^0.9.0"
pydantic = "^1.9.1"
tweepy = "^4.10.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = {extras = ["pyproject"], version = "^5.10.1"}
mypy = "^0.961"
pydocstyle = "^6.1.1"
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
