[tool.flake8]
extend-ignore = "E501,W503"

[tool.isort]
profile = "black"

[tool.poetry]
name = "twitter-rss"
version = "2022.07.31.1"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.5.0"
fastapi = "^0.78.0"
feedgen = "^1.0.0"
pydantic = "^1.10.19"
tweepy = "^4.14.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = {extras = ["pyproject"], version = "^5.13.2"}
mypy = "^1.14"
pydocstyle = "^6.3.0"
pyproject-flake8 = "^7.0.0"
types-cachetools = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
